--- a/app/globals.css
+++ b/app/globals.css
@@ -67,6 +67,11 @@ body {
   min-height: 100vh;
 }
 
+body#library-no-scroll, body#library-no-scroll main {
+  overflow: hidden !important;
+  height: 100vh !important;
+}
+
 a {
   color: inherit;
   text-decoration: none;
