--- a/components/LibraryLayout/LibraryLayout.module.css
+++ b/components/LibraryLayout/LibraryLayout.module.css
@@ -1,7 +1,7 @@
 .libraryLayout {
   height: 100vh;
   width: 100vw;
-  overflow: hidden;
+  overflow: visible;
   display: flex;
   flex-direction: column;
 }
